--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,12 @@
   margin: 0;
   padding: 0;
   font-family: Quicksand;
+  box-sizing: border-box;
+}
+
+body{
+  background-color: #0e1630;
+  width: 100%;
 }
 
 .body{
@@ -26,14 +32,6 @@ h2{
   font-weight: bold;
 }
 
-.header {
-  min-height: 100vh;
-  width: 100%;
-  background-image: url(../image/introbg.jpg);
-  background-position: center;
-  background-size: cover;
-  position: relative;
-}
 .logo {
   height: 80px;
   background-color: #ffffff;
@@ -49,7 +47,7 @@ h2{
 }
 
 nav {
-  height: 80px;
+  height: auto;
   display: flex;
   padding: 2% 6%;
   justify-content: space-between;
@@ -66,19 +64,15 @@ nav {
   text-align: center;
 }
 
-.nav-links ul li {
-  list-style: none;
+.nav-links a {
   display: inline-block;
   padding: 8px 20px;
   position: relative;
-}
-
-.nav-links ul li a {
   color: #ffffff;
   text-decoration: none;
 }
 
-.nav-links ul li.active::after {
+.nav-links a.active::after {
   content: "";
   width: 60%;
   height: 2px;
@@ -86,13 +80,24 @@ nav {
   display: block;
   margin: 0;
 }
+
+.nav-links a.hamburger{
+  display: none;
+}
+
+.header {
+  min-height: 100vh;
+  width: 100%;
+  background-image: url(../image/introbg.jpg);
+  background-position: center;
+  background-size: cover;
+  position: relative;
+}
+
 .text-box {
   width: 80%;
   color: #ffffff;
-  position: absolute;
-  top: 70%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  margin: 10% auto auto auto;
   display: flex;
   justify-content: space-between;
 }
@@ -727,104 +732,4 @@ margin-bottom: 146px;
 }
 .quick_links .link-divide{
   color: #808dad;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (max-width: 700px) {
-
-  body{
-    width: 100%;
-  }
-  .text-box {
-    text-align: center;
-    flex-direction: column;
-    top: 80%;
-    background-color: rgba(0, 0, 0, 0.7);
-    padding: 20px;
-  }
-  .text-box div {
-    width: 100%;
-  }
-  .text-box .right-box {
-    display: none;
-  }
-  .text-box h2 {
-    color: #eb4a4a;
-  }
-  .text-box::after {
-    content: "";
-    width: 100%;
-    height: 2px;
-    background-color: #eb4a4a;
-  }
-  .left-box p {
-    color: #ffffff;
-    margin-top: 30px;
-  }
-
-  #wrapper {
-    max-width: 280px;
-  }
-
-  /* .nav-links ul li {
-    display: block;
-  }
-  .nav-links {
-    position: absolute;
-    background: #0e1630;
-    height: 100vh;
-    width: 200px;
-    top: 0;
-    right: -200px;
-    text-align: left;
-    z-index: 2;
-    transition: 1s;
-  } */
-}
-@media (max-width: 1080px) {
-  .row-publications {
-    flex-direction: column;
-  }
-  .publication-col p {
-    margin-bottom: 10%;
-  }
-}
-
-@media (max-width: 1440px) {
-  .text-box {
-    text-align: center;
-    flex-direction: column;
-    top: 74%;
-  }
-  .text-box div {
-    width: 100%;
-  }
-  .text-box h2 {
-    color: #eb4a4a;
-  }
-  .left-box,
-  .right-box {
-    background-color: rgba(0, 0, 0, 0.7);
-    padding: 20px;
-  }
-  .left-box p {
-    color: #ffffff;
-    margin-top: 30px;
-  }
-
-  .right-box {
-    text-align: center;
-    margin-top: 50px;
-  }
 }
