--- a/css/980.css
+++ b/css/980.css
@@ -150,17 +150,19 @@
     display: flex;
     flex-direction: column-reverse;
     justify-content: center;
-    margin: auto;
+    margin: 0 auto -20% auto;
     align-items: center;
     text-align: center;
     width: 100%;
     }
 
+    /* changed */
     .about_content{
         /* width: 80%; */
         padding: 5%;
     }
 
+    /* changed */
     .about_content h2 {
     font-size: 30px; 
     font-weight: bold;
@@ -168,14 +170,15 @@
     margin: 30px 0;
     }
 
+    /* changed */
     .about_content p {
     width: 100%;
     font-size: 18px;
     }
 
     .about_social {
-    margin-top: 50px;
-    width: 30%;
+    width: 50%;
+    margin: 10% auto;
     display: flex;
     justify-content: space-between;
     }
