--- a/css/980.css
+++ b/css/980.css
@@ -119,7 +119,7 @@
     /* changes */
     .text-box div {
         margin-top: 100%;
-        padding: 5% 5% 15% 5%;
+        padding: 5% 5% 20% 5%;
         width: 100%;
         text-align: center;
     }
@@ -148,11 +148,12 @@
 
     /* changes */
     .about_container {
-    padding-top: 10%;
+    padding-top: 20%;
+    padding-bottom: 15%;
     display: flex;
     flex-direction: column-reverse;
     justify-content: center;
-    margin: 0 auto -20% auto;
+    margin: auto;
     align-items: center;
     text-align: center;
     width: 100%;
@@ -233,24 +234,26 @@
         width: 100%;
         margin: auto;
         text-align: center;
-        padding: 0 0 146px 0;
+        padding: 20% 5% 20% 5%;
     }
+
     .publication h2 {
         font-size: 30px;
-        margin-top: 20%;
+        margin-bottom: 15%;
     }
+
     .row-publications {
-        margin-top: 5%;
+        margin-top: 10%;
         display: flex;
-        justify-content: space-between;
+        flex-direction: column;
     }
 
     .publication-col {
-        flex-basis: 30%;
         display: flex;
         justify-items: center;
         flex-direction: column;
-        align-items: center;
+        margin: 5% auto 25% auto;
+        text-align: center;
     }
 
     .publication_icons {
@@ -268,10 +271,14 @@
     }
 
     .publication-col h4 {
-        font-size: 38px;
+        font-size: 30px;
         font-weight: 500;
         color: #ffffff;
-        margin: 40px 0 40px 0;
+        margin: 30px 0 20px 0;
+    }
+
+    .publication-col p {
+        text-align: center;
     }
 
 
