--- a/css/980.css
+++ b/css/980.css
@@ -287,10 +287,10 @@
     /* Slider */
 
     .header-text {
-    width: 70%;
-    margin: auto;
-    text-align: center;
-    padding: 20% 5% 15% 5%;
+        width: 70%;
+        margin: auto;
+        text-align: center;
+        padding: 20% 5% 20% 5%;
     }
 
     .header-text h2{
@@ -298,17 +298,17 @@
         margin-bottom: 25%;
     }
     #wrapper {
-    width: 100%;
-    /* max-width: 1168px; */
-    margin: auto;
-    margin-top: 5%;
-    position: relative;
+        width: 100%;
+        /* max-width: 1168px; */
+        margin: auto;
+        margin-top: 5%;
+        position: relative;
     }
 
     #carousel {
-    overflow: auto;
-    scroll-behavior: smooth;
-    scrollbar-width: none;
+        overflow: auto;
+        scroll-behavior: smooth;
+        scrollbar-width: none;
     }
 
     #carousel::-webkit-scrollbar {
@@ -366,118 +366,118 @@
 
     /*Blog Section*/
     .header-text-blog, .header-text-social{
-    width: 70%;
-    margin: auto;
-    text-align: center;
-    padding-top: 146px;
+        width: 70%;
+        margin: auto;
+        text-align: center;
+        padding: 20% 0% 15% 0%;
+        
     }
     .header-text-blog h2, .header-text-social h2{
-    font-size: 40px;
-    font-weight: bold;
-    color: #eb4a4a;
+        font-size: 30px;
+        margin-bottom: 0%;
+        font-weight: bold;
+        color: #eb4a4a;
     }
     .latest-blog {
-    display: flex;
-    justify-content: center;
-    width: 70%;
-    margin: auto;
-    gap: 2rem;
-    margin-top: 5%;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        width: 95%;
     }
 
     .blog {
-    display: flex;
-    flex-direction: column;
-    width: clamp(20rem, calc(20rem + 2vw), 22rem);
-    width: 414px;
-    height: 650px;
-    overflow: hidden;
-    border-radius: 6px;
-    background-color: #171f38;
-    padding: 0.6em;
+        display: flex;
+        flex-direction: column;
+        width: clamp(20rem, calc(20rem + 2vw), 22rem);
+        width: 100%;
+        height: auto;
+        overflow: auto;
+        border-radius: 6px;
+        background-color: #171f38;
+        padding: 0.6em;
 
     }
     .blog-section{
-    margin-bottom: 146px;
-    display: none;
+        margin-bottom: 146px;
+        padding: 5%;
     }
 
 
     .blog-image{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 
     .blog__image {
-    width: 390px;
-    height: 262px;
-    display: block;
-    object-fit: cover;
-    border-radius: 6px 6px 0 0;
+        width: 100%;
+        height: auto;
+        display: block;
+        object-fit: cover;
+        border-radius: 6px 6px 0 0;
     }
 
     .blog-tag {
-    margin-top: -11%;
-    padding: 0.6em;
-    margin-left: -158px;
+        margin-top: -15%;
+        padding: 0.6em;
+        margin-left: -15%;
     }
 
     .tag {
-    width: 75px;
-    height: 31px;
-    align-self: flex-start;
-    padding: .25em .75em;
-    border-radius: 4px;
-    font-size: 16px;
-    font-weight: 500;
-    text-align: center;
-    justify-content: center;
+        width: 75px;
+        height: 31px;
+        align-self: flex-start;
+        padding: .25em .75em;
+        border-radius: 4px;
+        font-size: 16px;
+        font-weight: 500;
+        text-align: center;
+        justify-content: center;
     }
 
     .tag-item {
-    background-color: #171F38;
-    color: #eb4a4a;
+        background-color: #171F38;
+        color: #eb4a4a;
     }
 
     .blog-date {
-    display: flex;
-    align-items: center;
-    font-size: 16px;
-    font-weight: regular;
-    padding-left: 4px;
+        display: flex;
+        align-items: center;
+        font-size: 16px;
+        font-weight: regular;
+        padding-left: 4px;
     }
 
     .blog-date p {
-    margin: 18px 0 0 10px;
+        margin: 18px 0 0 10px;
     }
 
     .fa-calendar {
-    color: #808dad;
-    margin-top: 20px;
+        color: #808dad;
+        margin-top: 20px;
     }
 
     .blog-date p {
-    color: #808da8;
+        color: #808da8;
     }
     .blog-content{
-    margin-top: 10px;
+        margin-top: 10px;
     }
 
     .blog-content h3{
-    color: #ffffff;
-    font-size: 22px;
-    font-weight: 700;
-    padding-top:10px;
+        color: #ffffff;
+        font-size: 22px;
+        font-weight: 700;
+        padding-top:10px;
     }
     .blog-content p {
-    padding: 20px 0;
+        padding: 20px 0;
     }
     .blog-content a{
-    text-decoration: none;
-    font-size: 16px;
-    font-weight: 700;
-    color: #eb4a4a;
+        text-decoration: none;
+        font-size: 16px;
+        font-weight: 700;
+        color: #eb4a4a;
     }
 
     /*End of Blog Section*/
