--- a/css/980.css
+++ b/css/980.css
@@ -369,7 +369,7 @@
         width: 70%;
         margin: auto;
         text-align: center;
-        padding: 20% 0% 15% 0%;
+        padding: 20% 0% 10% 0%;
         
     }
     .header-text-blog h2, .header-text-social h2{
@@ -398,8 +398,8 @@
 
     }
     .blog-section{
-        margin-bottom: 146px;
         padding: 5%;
+        height: 100%;
     }
 
 
@@ -486,9 +486,9 @@
 
     /*Starting of Social Section*/
 
-    .social-profile{
+    /* .social-profile{
         display: none;
-    }
+    } */
 
     .facebook iframe{
     border-radius: 6px 6px 0px 0px;
